--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Yi Tian"
 description              : &description "Undergradute, Department of Automation, Tsinghua Univeristy"
 url                      : https://RuoyunMa.github.io # the base hostname & protocol for your site 
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "RuoyunMa.github.io"
+repository               : "RuoyunMa/RuoyunMa.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
