--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   location         : "Beijing, China"
   employer         :
   googlescholar    : 
-  email            : tianyi15@mails.tsinghua.edu.cn
+  email            : "tianyi15@mails.tsinghua.edu.cn"
   uri              :
   bitbucket        :
   codepen          :
