--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Yi Tian"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Undergraduate, Department of Automation, Tsinghua University"
   location         : "Beijing, China"
   employer         :
