--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,16 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
     url: /cv/
+
+  - title: "Publications"
+    url: /publications/
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "Awards & Honors"
+    url: /awards/
+
+  - title: "Talks"
+    url: /talks/        
+        
+  - title: "Blogs"
+    url: /year-archive/
