--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   location         : "Beijing, China"
   employer         :
   googlescholar    : 
-  email            : "mry15@mails.tsinghua.edu.cn"
+  email            : "mryapril@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
