--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Ruoyun Ma"
-  avatar           : "bio-photo.jpg"
+  avatar           : "bio-photo-LR.jpg"
   bio              : "Undergraduate, School of Environment, Tsinghua University"
   location         : "Beijing, China"
   employer         :
