--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,11 +6,11 @@ main:
   - title: "Publications"
     url: /publications/
     
-  - title: "Awards & Honors"
-    url: /awards/
+#  - title: "Awards & Honors"
+#    url: /awards/
 
-  - title: "Talks"
-    url: /talks/        
+#  - title: "Talks"
+#    url: /talks/        
         
-  - title: "Blogs"
-    url: /year-archive/
+#  - title: "Blogs"
+#    url: /year-archive/
