--- a/_config.yml
+++ b/_config.yml
@@ -78,13 +78,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ruoyun Ma"
-  avatar           : "bio-photo-LR.jpg"
-  bio              : "Undergraduate, School of Environment, Tsinghua University"
-  location         : "Beijing, China"
+  name             : #"Ruoyun Ma"
+  avatar           : #"bio-photo-LR.jpg"
+  bio              : #"Undergraduate, School of Environment, Tsinghua University"
+  location         : #"Beijing, China"
   employer         :
   googlescholar    : 
-  email            : "mryapril@gmail.com"
+  email            : #"mryapril@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
@@ -92,7 +92,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "RuoyunMa"
+  github           : #"RuoyunMa"
   google_plus      :
   keybase          :
   instagram        :
